<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_Furnace" Id="{0a68cee5-3bf6-4bc6-ac07-6733f18f0137}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Received_e2408_data_1 	:ST_E2408_Data;
	Received_e2408_data_2 	:ST_E2408_Data;
	Received_e2408_data_3 	:ST_E2408_Data;
	Received_e2408_data_4 	:ST_E2408_Data;
	Received_e2408_data_5 	:ST_E2408_Data;
	Received_e2408_data_6 	:ST_E2408_Data;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>